# chibicc

./: .gitignore  CMakeLists.txt  ISSUES.md  Makefile  README.md  RELEASE_NOTES.md  alignof.dot  alloca.dot  arith.dot  array_initializer.dot  asm.dot  asm1.dot  asm2a.dot  asm2b.dot  asm2c.dot  asm3.dot  asm6.dot  atomic.dot  attribute.dot  bitfield.dot  builtin.dot  builtin_memset.c  cast.dot  chibicc.h  chibicc.ll  codegen.c  codegen.ll  commonsym.dot  compare.txt  compat.dot  complit.dot  const.dot  constexpr.dot  control.dot  debug.c  debug.ll  decl.dot  define.dot  dwarf.c  enum.dot  (+115 more)
diagram/: README.md
include/: assert.h  avx2intrin.h  avx512vlbwintrin.h  avxintrin.h  bmi2intrin.h  cpuid.h  emmintrin.h  float.h  limits.h  math.h  mm3dnow.h  mm_malloc.h  mmintrin.h  omp.h  stdarg.h  stdatomic.h  stddef.h  stddef.hold  tgmath.h  xmmintrin.h
issues/: CMakeCompilerABI.h  CompilerABI.c  alignas2.c  apprentice.S  apprentice.c  array2.c  arrayinit1.c  asm1.c  asm2d.c  asm4.c  asm5.c  asm_mul_test.c  assert1.c  assign1.c  atomic4.c  atomic5.c  atomic6.c  atomic_codegen_probe.c  atomic_sync_bool_compare_and_swap.c  atomic_sync_fetch_and_add.c  atomic_sync_fetch_and_sub.c  atomic_sync_lock_and_set.c  atomic_sync_synchronize.c  atomic_sync_val_and_swap.c  attr_aligned.c  attr_cleanup.c  attr_cleanup2.c  attribute_aligned.c  attribute_sanitize.c  bitand_folding.c  bitfield2.c  bitmapset.c  bntest.c  bogusfree.c  builtin2.c  builtin_abort.c  builtin_add_overflow.c  builtin_choose_expr.c  builtin_clz.c  builtin_ctz.c  (+325 more)
test/: agg_eval.c  alias.c  align2.c  align7_probe.c  asm.c  (+849 more)
(+2 files in other folders)
